# fastapi-task-with-alchemy

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  main.py  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: c08f3d6c528a_.py
apps/auth/: repository.py  routers.py  schemas.py  services.py
apps/users/: celery_worker.py  models.py  repository.py  routers.py  schemas.py  services.py  tasks.py
routers/: router_api_v1.py
settings/: settings.py
tests/: conftest.py
tests/users/: test_api.py  test_repository.py  test_services.py  test_tasks.py
utils/: jwt.py
